corrected alignemt and padding

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -352,11 +352,15 @@ nav {
 .river1_text, .river2_text, .river3_text {
     padding-right: 15px;
     padding-left: 15px;
-    text-align: justify;
+    text-align: left;
 }
 
 .river1_content h2 , .river2_content h2 , .river3_content h2 {
     text-align: left;
     padding-left: 15px;
     /* border: 1px solid blue; */
+}
+
+.river1-img, .river2-img, .river3-img {
+    padding: 15px;
 }
